fix: particles background overflowing

--- a/src/styles/SiteParticles.module.css
+++ b/src/styles/SiteParticles.module.css
@@ -1,6 +1,5 @@
 .particles {
     position: absolute;
     width: 100vw;
-    height: 100vh;
     z-index: -1;
 }
